@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/openra
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/openra/ChangeLog,v 1.13 2013/05/13 19:40:10 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/openra/ChangeLog,v 1.14 2013/06/23 14:06:13 hasufell Exp $
+
+  23 Jun 2013; Julian Ospald <hasufell@gentoo.org> openra-20130514.ebuild:
+  migrate to mono-env
 
 *openra-20130514 (13 May 2013)
 
